split form registration for pro and user

--- a/app/views/devise/registrations/_new_diver.html.erb
+++ b/app/views/devise/registrations/_new_diver.html.erb
@@ -5,11 +5,11 @@ data: {turbo: false}) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :firstname,
+    <%= f.input :first_name,
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "firstname" }  %>
-    <%= f.input :lastname,
+    <%= f.input :last_name,
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "lastname" }  %>
