--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,11 @@
 <h2>Sign up</h2>
 
-<%# if subscribe as a user -> %>
-render "new_user"
+<%= render "new_diver" %>
+<%= render "new_pro" %>
+<%# if subscribe as a diver -> %>
+
 <%# else subsribe as a pro -> %>
-render "new_pro"
+
 
 
 
