--- a/app/views/devise/registrations/_new_pro.html.erb
+++ b/app/views/devise/registrations/_new_pro.html.erb
@@ -14,7 +14,12 @@ data: {turbo: false}) do |f| %>
                 autofocus: true,
                 input_html: { autocomplete: "lastname" }  %>
 
+    <%= f.input :email,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "email" }%>
 
+                <%= hidden_field_tag :pro, true %>
     <%= f.input :password,
                 required: true,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
