--- a/app/views/pros/index.html.erb
+++ b/app/views/pros/index.html.erb
@@ -1,5 +1,33 @@
-<h1>Ceci est la page de résultat</h1>
+<div class="container">
+  <div class="d-flex align-items-center justify-content-between my-4">
+    <h3 class="mb-0">Discover all our professionnal divers</h3>
+    <div class="search-index w-25">
+          <%= form_tag pros_path, method: :get, class: "d-flex" do %>
+            <%= text_field_tag :query,
+              params[:query],
+              class: "form-control",
+              placeholder: "Search for a pro"
+            %>
+          <button name="button" type="submit" class="btn btn-primary">
+          <i class="fas fa-search"></i>
+        </button>
+          <% end %>
+      </div>
+    </div>
 
-<% @pros.each do |p| %>
- <%= p.first_name %>
-<% end %>
+  <div class="cards mb-4">
+    <% @pros.each do |p| %>
+      <%= link_to pro_path(p) do %>
+        <div class="card-pro">
+          <%= cl_image_tag p.avatar.key if p.avatar.present? %>
+          <div class="card-infos font-weight-light">
+            <div>
+              <h2><%= p.first_name %></h2>
+              <p><%= p.bio %></p>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+</div>
