--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,3 +1,13 @@
+.avatar-profile {
+  width: 200px;
+  border-radius: 50%;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+  border: white 1px solid;
+}
+
+
+// classes wagon :
+
 .avatar {
   width: 40px;
   border-radius: 50%;
