--- a/app/views/pros/index.html.erb
+++ b/app/views/pros/index.html.erb
@@ -14,6 +14,11 @@
           <% end %>
       </div>
     </div>
+    <div style="width: 100%; height: 600px;"
+  data-controller="map"
+  data-map-markers-value="<%= @markers.to_json %>"
+  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
 
   <div class="cards mb-4">
     <% @pros.each do |p| %>
@@ -22,7 +27,7 @@
           <%= cl_image_tag p.avatar.key if p.avatar.present? %>
           <div class="card-infos font-weight-light">
             <div>
-              <h2><%= p.first_name %></h2>
+              <h2><%= p.first_name %> <%= p.last_name[0].capitalize%>.</h2>
               <p><%= p.bio %></p>
             </div>
           </div>
