--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,19 @@
-<%= render "new_diver" %>
-<%= render "new_pro" %>
+<nav>
+  <div class="tab-content">
+    <div class="tab-pane fade show active">Sign up as a diver
+    <div><%= render "new_diver" %></div></div>
+  </div>
+</nav>
+
+<nav>
+<div class="tab-content">
+  <div class="tab-pane fade show active">Sign up as a pro
+<div><%= render "new_pro" %></div></div>
+</div>
+</nav>
+
 <%# if subscribe as a diver -> %>
 
 <%# else subsribe as a pro -> %>
-
-
-
 
 <%= render "devise/shared/links" %>
