--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,16 +1,13 @@
-<nav>
-  <div class="tab-content">
-    <div class="tab-pane fade show active">Sign up as a diver
-    <div><%= render "new_diver" %></div></div>
-  </div>
-</nav>
 
-<nav>
-<div class="tab-content">
-  <div class="tab-pane fade show active">Sign up as a pro
-<div><%= render "new_pro" %></div></div>
+  <div class="nav nav-tabs">
+    <div class="nav-link active" data-bs-toggle="tab" aria-selected="true">Sign up as a diver</div>
+    <%= render "new_diver" %>
+  </div>
+
+<div class="nav nav-tabs">
+  <div class="nav-link" data-bs-toggle="tab" aria-selected="false">Sign up as a pro</div>
+<%= render "new_pro" %>
 </div>
-</nav>
 
 <%# if subscribe as a diver -> %>
 
