--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -53,3 +53,50 @@
     padding: 2px 6px 2px 6px;
   }
 }
+
+// Cards des offers dans la show du pro
+
+.card-offers {
+  overflow: hidden;
+  background: white;
+  // box-shadow: $box-shadow-cards;
+  margin-top: 10px;
+  border-radius: 5px;
+  > img {
+    height: 200px;
+    width: 100%;
+    object-fit: cover;
+  }
+  h2 {
+    font-size: 20px;
+    font-weight: bold;
+    color: #272343;
+    margin: 0;
+    margin-top: 10px;
+  }
+  p {
+    font-size: 12px;
+    margin: 0;
+    color: black;
+    // font-weight: $font-weight-light;
+  }
+  .card-infos {
+    padding: 25px 35px;
+    justify-content: space-between;
+    align-items: flex-end;
+    position: relative;
+    border-bottom: 3px;
+  }
+  .tag {
+    background-color: #272343;
+    color: whitesmoke;
+    border-radius: 5px;
+    box-shadow: 0px 4px;
+    text-align: center;
+    align-items: center;
+    text-transform: capitalize;
+    font-weight: bold;
+    width: fit-content;
+    padding: 2px 6px 2px 6px;
+  }
+}
