--- a/app/views/devise/registrations/_new_diver.html.erb
+++ b/app/views/devise/registrations/_new_diver.html.erb
@@ -27,6 +27,6 @@ data: {turbo: false}) do |f| %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
   </div>
 <% end %>
