--- a/app/views/devise/registrations/_new_pro.html.erb
+++ b/app/views/devise/registrations/_new_pro.html.erb
@@ -33,6 +33,8 @@ data: {turbo: false}) do |f| %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+    <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
+    </div>
   </div>
 <% end %>
