--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -1,6 +1,7 @@
+<div class="container opacity mt-2" style="width: 600px">
 <div class="card border-white p-5">
   <div class="text-center">
-    <h2 class="py-2"> Add a new offer</h2>
+    <h2 class="py-2">🤿 Add a new offer</h2>
   </div>
 <%= simple_form_for (@offer) do |f| %>
   <%= f.error_notification %>
@@ -14,14 +15,18 @@
         <%= f.input :category, placeholder:"" %>
         </div>
       </div>
-
       <div class="row g-3">
+        <div class="col 6">
+        <%= f.input :level, placeholder:"" %>
+        </div>
         <div class="col 6">
         <%= f.input :duration, placeholder:"" %>
         </div>
         <div class="col 6">
         <%= f.input :unit_duration, placeholder:"" %>
         </div>
+      </div>
+      <div class="row g-3">
         <div class="col 6">
         <%= f.input :price, placeholder:"" %>
         </div>
@@ -29,7 +34,15 @@
         <%= f.input :currency, placeholder:"" %>
         </div>
         <div class="col 6">
-        <%= f.input :level, placeholder:"" %>
+        <%= f.input :dives, placeholder:"" %>
+        </div>
+      </div>
+
+        <div class="col 6">
+        <%= f.input :prerequisites, placeholder:"" %>
+        </div>
+        <div class="col 6">
+        <%= f.input :included, placeholder:"" %>
         </div>
 
         <div class="description">
@@ -44,5 +57,5 @@
         </div>
       </div>
   <% end %>
-
+</div>
 </div>
