--- a/app/views/devise/registrations/_new_diver.html.erb
+++ b/app/views/devise/registrations/_new_diver.html.erb
@@ -5,24 +5,34 @@ data: {turbo: false}) do |f| %>
 
   <div class="form-inputs">
     <%= f.input :first_name,
-                required: true,
+                required: false,
                 autofocus: true,
-                input_html: { autocomplete: "firstname" }  %>
+                input_html: { autocomplete: "firstname" },
+                label: "*",
+                placeholder: "Firstname"%>
     <%= f.input :last_name,
-                required: true,
+                required: false,
                 autofocus: true,
-                input_html: { autocomplete: "lastname" }  %>
+                input_html: { autocomplete: "lastname" },
+                label: "*",
+                placeholder: "Lastname" %>
     <%= f.input :email,
-                required: true,
+                required: false,
                 autofocus: true,
-                input_html: { autocomplete: "email" }%>
+                input_html: { autocomplete: "email" },
+                label: "*",
+                placeholder: "name@email.com" %>
     <%= f.input :password,
-                required: true,
+                required: false,
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "new-password" },
+                label: "*",
+                placeholder: "password"%>
     <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+                required: false,
+                input_html: { autocomplete: "new-password" },
+                label: "*",
+                placeholder: "password confirmation"%>
 
   </div>
 
