--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -9,44 +9,44 @@
     <div class="form-inputs">
       <div class="row g-3">
         <div class="col 6">
-        <%= f.input :name, placeholder:"" %>
+        <%= f.input :name, label:"*", placeholder:"Name", required: false %>
         </div>
         <div class="col 6">
-        <%= f.input :category, placeholder:"" %>
-        </div>
-      </div>
-      <div class="row g-3">
-        <div class="col 6">
-        <%= f.input :level, placeholder:"" %>
-        </div>
-        <div class="col 6">
-        <%= f.input :duration, placeholder:"" %>
-        </div>
-        <div class="col 6">
-        <%= f.input :unit_duration, placeholder:"" %>
+        <%= f.input :category, label:"*", placeholder:"Category", required: false %>
         </div>
       </div>
       <div class="row g-3">
         <div class="col 6">
-        <%= f.input :price, placeholder:"" %>
+        <%= f.input :level, label:"*", placeholder:"Level", required: false %>
         </div>
         <div class="col 6">
-        <%= f.input :currency, placeholder:"" %>
+        <%= f.input :duration, label:"*", placeholder:"Duration", required: false %>
         </div>
         <div class="col 6">
-        <%= f.input :dives, placeholder:"" %>
+        <%= f.input :unit_duration, label:"*", placeholder:"Unit_duration", required: false %>
+        </div>
+      </div>
+      <div class="row g-3">
+        <div class="col 6">
+        <%= f.input :price, label:"*", placeholder:"Price", required: false %>
+        </div>
+        <div class="col 6">
+        <%= f.input :currency, label:"*", placeholder:"Currency", required: false %>
+        </div>
+        <div class="col 6">
+        <%= f.input :dives, label:"*", placeholder:"Dives", required: false %>
         </div>
       </div>
 
         <div class="col 6">
-        <%= f.input :prerequisites, placeholder:"" %>
+        <%= f.input :prerequisites, label:"*", placeholder:"Prerequisites", required: false %>
         </div>
         <div class="col 6">
-        <%= f.input :included, placeholder:"" %>
+        <%= f.input :included, label:"*", placeholder:"Included", required: false %>
         </div>
 
         <div class="description">
-        <%= f.input :briefing, placeholder: "" %>
+        <%= f.input :briefing, label:"*", placeholder:"Briefing", required: false %>
         </div>
 
       </div>
