--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -9,44 +9,44 @@
     <div class="form-inputs">
       <div class="row g-3">
         <div class="col 6">
-        <%= f.input :name, label:"*", placeholder:"Name", required: false %>
+        <%= f.input :name, label: false, placeholder:"Name*", required: false %>
         </div>
         <div class="col 6">
-        <%= f.input :category, label:"*", placeholder:"Category", required: false %>
-        </div>
-      </div>
-      <div class="row g-3">
-        <div class="col 6">
-        <%= f.input :level, label:"*", placeholder:"Level", required: false %>
-        </div>
-        <div class="col 6">
-        <%= f.input :duration, label:"*", placeholder:"Duration", required: false %>
-        </div>
-        <div class="col 6">
-        <%= f.input :unit_duration, label:"*", placeholder:"Unit_duration", required: false %>
+        <%= f.input :category, label: false, placeholder:"Category*", required: false %>
         </div>
       </div>
       <div class="row g-3">
         <div class="col 6">
-        <%= f.input :price, label:"*", placeholder:"Price", required: false %>
+        <%= f.input :level, label: false, placeholder:"Level*", required: false %>
         </div>
         <div class="col 6">
-        <%= f.input :currency, label:"*", placeholder:"Currency", required: false %>
+        <%= f.input :duration, label: false, placeholder:"Duration*", required: false %>
         </div>
         <div class="col 6">
-        <%= f.input :dives, label:"*", placeholder:"Dives", required: false %>
+        <%= f.input :unit_duration, label: false, placeholder:"Unit_duration*", required: false %>
+        </div>
+      </div>
+      <div class="row g-3">
+        <div class="col 6">
+        <%= f.input :price, label: false, placeholder:"Price*", required: false %>
+        </div>
+        <div class="col 6">
+        <%= f.input :currency, label: false, placeholder:"Currency*", required: false %>
+        </div>
+        <div class="col 6">
+        <%= f.input :dives, label: false, placeholder:"Dives*", required: false %>
         </div>
       </div>
 
         <div class="col 6">
-        <%= f.input :prerequisites, label:"*", placeholder:"Prerequisites", required: false %>
+        <%= f.input :prerequisites, label: false, placeholder:"Prerequisites*", required: false %>
         </div>
         <div class="col 6">
-        <%= f.input :included, label:"*", placeholder:"Included", required: false %>
+        <%= f.input :included, label: false, placeholder:"Included*", required: false %>
         </div>
 
         <div class="description">
-        <%= f.input :briefing, label:"*", placeholder:"Briefing", required: false %>
+        <%= f.input :briefing, label: false, placeholder:"Briefing*", required: false %>
         </div>
 
       </div>
