--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+<div class="banner" >
+    <h1>Welcome to Scuba libre</h1>
+    <p>Find a scuba instructor for your next dive!</p>
+</div>
+</div>
