--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,5 +2,17 @@
 <div class="banner" >
     <h1>Welcome to Scuba libre</h1>
     <p>Find a scuba instructor for your next dive!</p>
+    <div class="search w-25">
+        <%= form_tag pros_path, method: :get, class: "d-flex" do %>
+          <%= text_field_tag :query,
+            params[:query],
+            class: "form-control",
+            placeholder: "Find a pro"
+          %>
+        <button name="button" type="submit" class="btn btn-primary">
+          <i class="fas fa-search"></i>
+        </button>
+        <% end %>
+    </div>
 </div>
 </div>
