--- a/app/views/offers/_show_offers_pro.html.erb
+++ b/app/views/offers/_show_offers_pro.html.erb
@@ -19,7 +19,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary">Request booking</button>
       </div>
     </div>
   </div>
