--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -62,6 +62,7 @@
   // box-shadow: $box-shadow-cards;
   margin-top: 10px;
   border-radius: 5px;
+  padding: 10px;
   > img {
     height: 200px;
     width: 100%;
@@ -71,8 +72,6 @@
     font-size: 20px;
     font-weight: bold;
     color: #272343;
-    margin: 0;
-    margin-top: 10px;
   }
   p {
     font-size: 12px;
@@ -80,11 +79,11 @@
     color: black;
     // font-weight: $font-weight-light;
   }
-  .card-infos {
-    padding: 25px 35px;
+  .card-offers-bottom {
+    display: flex;
+    // padding: 25px 35px;
     justify-content: space-between;
     align-items: flex-end;
-    position: relative;
     border-bottom: 3px;
   }
   .tag {
