--- a/app/views/pros/show.html.erb
+++ b/app/views/pros/show.html.erb
@@ -1,18 +1,18 @@
-<div class="banner">
-</div>
-<div class= "avatar-profile">
+<div class="banner-show-pro d-flex" style="background-color:#3439C9";>
   <%= cl_image_tag @pro.avatar.key, class: "avatar-profile" %>
-</div>
-<h1><%= @pro.first_name %> <%= @pro.last_name[0].capitalize%>.</h1>
-
-
-<h2>Modal on - All offers of <%= @pro.first_name %> </h2>
-
-<div class="cards mb-4">
-    <% @offers.each do |o| %>
-        <%= render "offers/show_offers_pro", offer: o %>
-    <% end %>
+  <div class="banner-pro-info">
+    <h1><%= @pro.first_name %> <%= @pro.last_name[0].capitalize%>.</h1>
+    <p><%= @pro.bio%></p>
+  </div>
 </div>
 
+<div class="container">
+  <h2>Discover everything <%=@pro.first_name%> is offering:</h2>
 
-<%= link_to "Create a new offer", new_offer_path %>
+  <div class="cards mb-4">
+      <% @offers.each do |o| %>
+          <%= render "offers/show_offers_pro", offer: o %>
+      <% end %>
+  </div>
+  <%= link_to "Create a new offer", new_offer_path %>
+</div>
