--- a/app/views/pros/show.html.erb
+++ b/app/views/pros/show.html.erb
@@ -1,15 +1,18 @@
-<div class="banner-show-pro d-flex" style="background-color:#3439C9";>
+<div class="banner-show-pro d-flex">
   <%= cl_image_tag @pro.avatar.key, class: "avatar-profile" %>
   <div class="banner-pro-info">
     <h1><%= @pro.first_name %> <%= @pro.last_name[0].capitalize%>.</h1>
+    <h5><i class="fa-solid fa-location-pin"></i> <%= @pro.location %></h3>
     <p><%= @pro.bio%></p>
   </div>
 </div>
 
-<div class="container">
+<%= link_to "Back", :back %>
+
+<div class="container mt-5">
   <h2>Discover everything <%=@pro.first_name%> is offering:</h2>
 
-  <div class="cards mb-4">
+  <div class="offers mb-4">
       <% @offers.each do |o| %>
           <%= render "offers/show_offers_pro", offer: o %>
       <% end %>
