--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,14 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <div class="container-fluid">
-    <%= link_to root_path, class: "navbar-brand" do %>
-      <%= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
-    <% end %>
+<%# Conditions on the navbar class depending on the dark or light them%>
 
+<% if ((controller_name == "pages" && action_name == "home") || (controller_name == "pros" && action_name == "show"))  %>
+  <div class="navbar navbar-expand-sm navbar-transparent navbar-dark fixed-top">
+<% else %>
+  <div class="navbar navbar-expand-sm navbar-plain navbar-light fixed-top">
+<% end %>
+
+<%# The rest of the navbar%>
+  <div class="container-fluid">
+    <%= link_to "Scuba Libre", root_path, class: "navbar-brand"%>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -27,7 +32,7 @@
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+            <%= link_to "Login", new_user_session_path, class: "btn btn-outline-light" %>
           </li>
         <% end %>
       </ul>
