--- a/app/views/pros/index.html.erb
+++ b/app/views/pros/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container container-transparent-navbar">
   <div class="d-flex align-items-center justify-content-between my-4">
     <h3 class="mb-0">Discover all our professionnal divers</h3>
     <div class="search-index w-25">
