--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,26 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+.search {
+  border: none;
+  border-radius: 100px;
+  background-color: white;
+  display: block;
+  padding: 10px 10px 10px 20px;
+    i {
+    color: white;
+    }
+    .form-control {
+    border: none;
+    border-radius: 25px;
+    background-color: white;
+    &:focus {
+      box-shadow: none;
+      }
+    }
+  }
+
+  .btn-primary {
+    border-radius: 100px;
+  }
