--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
           <%= text_field_tag :query,
             params[:query],
             class: "form-control",
-            placeholder: "Location"
+            placeholder: "Where do you want to dive?"
           %>
         <button name="button" type="submit" class="btn btn-primary">
           <i class="fas fa-search"></i>
