--- a/app/assets/stylesheets/pages/_show_pros.scss
+++ b/app/assets/stylesheets/pages/_show_pros.scss
@@ -4,8 +4,8 @@
   color: white;
   // height: 500px;
   padding: 100px;
-  // background-color: $deep_blue;
-  background-image: linear-gradient(0deg, rgba(29,29,29,0.4) 0%, rgba(29,29,29,0.4) 100%), url(summer-background-sea-water.jpeg);
+  background-color: $deep_blue;
+  // background-image: linear-gradient(0deg, rgba(29,29,29,0.4) 0%, rgba(29,29,29,0.4) 100%), url(summer-background-sea-water.jpeg);
   background-size: cover;
   // z-index: -1;
   // top: 0;
