home et location sur index

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,7 @@
+  <%= video_tag "https://res.cloudinary.com/dtohrmf4g/video/upload/v1654161798/aquarium_-_109184_Original_rbgmb8.mp4", autoplay: true, muted: true, loop: true, id: "background-video" %>
+
 <div class="container">
-<div class="banner" >
+  <div class="banner" >
     <h1>Welcome to Scuba libre</h1>
     <p>Find a scuba instructor for your next dive!</p>
     <div class="search w-25">
@@ -14,5 +16,12 @@
         </button>
         <% end %>
     </div>
-  <%= video_tag "https://res.cloudinary.com/dmpzucunq/video/upload/v1654116041/sea_-_13704_Original_osebcs.mp4", autoplay: true, muted: true, loop: true, id: "background-video" %>
+  </div>
+</div>
+<div class="dark ">
+  <div class="container">
+    <h1>About us</h1>
+    <p>Founded by divers and ocean lovers, Scuba Libre allows you to explore the underwater world the easiest way possible.
+      Whether you're eager to learn how to dive or you want to perfect your skills, our members will find the best option possible for you !</p>
+  </div>
 </div>
