--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,7 +8,7 @@
   top: 0;
   bottom: 0;
   z-index: -1;
-  position: fixed;
+  position: absolute ;
   }
 
 
@@ -17,20 +17,22 @@
   background-size: fill;
   background-position: center;
   padding: 250px 0;
-  // background-image: url('batal.jpg')
-
+  height: 100vh;
+  h1 {
+    margin: 0;
+    color: white;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+    font-size: 37px;
+    font-weight: bold;
+  }
+  p {
+    font-size: 25px;
+    color: white;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+  }
 }
 
-.banner h1 {
-  margin: 0;
+.dark {
   color: white;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 37px;
-  font-weight: bold;
-}
-
-.banner p {
-  font-size: 25px;
-  color: white;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+  background-color: $deep_blue;
 }
