--- a/app/views/pros/index.html.erb
+++ b/app/views/pros/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container container-transparent-navbar">
-  <div class="d-flex align-items-center justify-content-between my-4">
-    <h3 class="mb-0">Discover all our professionnal divers</h3>
-    <div class="search w-25">
+  <div class="my-4 text-center">
+    <h3 class="mb-10 ">Discover all our professionnal divers</h3>
+    <div class="search d-grid gap-2 d-md-flex justify-content-center">
           <%= form_tag pros_path, method: :get, class: "d-flex" do %>
             <%= text_field_tag :query,
               params[:query],
