--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,1 +1,11 @@
-<h1>Ceci est un dashboard de qualité.</h1>
+<div class="container-transparent-navbar">
+  <h1>Ceci est un dashboard de qualité</h1>
+</div>
+
+<div class="col-9 ml-3 dashboard">
+      <div class="text-center">
+        <h2><i class="fa-solid fa-dharmachakra"></i> Dashboard</h2>
+      </div>
+      <%= render "bookings/dashboard"%>
+      <%# <%= render "boats/owner_boats"%> %>
+</div>
