--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -59,6 +59,8 @@
   background-color: white;
   display: block;
   padding: 10px 10px 10px 20px;
+  border: 1px solid #e7e7e9;
+  justify-content: left !important;
     i {
     color: white;
     }
@@ -70,8 +72,17 @@
       box-shadow: none;
       }
     }
-  }
 
   .btn-primary {
     border-radius: 100px;
+    margin: 3px;
+    margin-left: 40px;
   }
+}
+.btn-secondary {
+  background-color: #eef3f9;
+  color: #3439C9;
+  border: none;
+  border-radius: 23px;
+  margin-bottom: 10px
+}
