--- a/app/views/pros/index.html.erb
+++ b/app/views/pros/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container container-transparent-navbar">
   <div class="my-4 text-center">
     <h3 class="mb-10 ">Discover all our professionnal divers</h3>
-    <div class="search d-grid gap-2 d-md-flex justify-content-center">
+    <div class="search d-grid gap-2 d-md-flex justify-content-center w-25 m-auto">
           <%= form_tag pros_path, method: :get, class: "d-flex" do %>
             <%= text_field_tag :query,
               params[:query],
@@ -14,7 +14,9 @@
           <% end %>
       </div>
     </div>
-    <div style="width: 100%; height: 600px;"
+                <a class="btn btn-secondary" href="#" role="button">Latest</a>
+      <button class="btn btn-secondary" type="submit">Popular</button>
+    <div style="width: 100%; height: 600px; margin-left-30"
   data-controller="map"
   data-map-markers-value="<%= @markers.to_json %>"
   data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
