--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,6 +13,7 @@
 
 
 
+
 .banner {
   background-size: fill;
   background-position: center;
@@ -32,7 +33,66 @@
   }
 }
 
+.fold {
+  height: 80vh;
+  padding-top: 20vh;
+  margin-bottom: 20px;
+}
+
 .dark {
   color: white;
   background-color: $deep_blue;
+}
+
+.card-trip {
+  overflow: hidden;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
+
+.card-trip > img {
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.card-trip h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+  color: black;
+}
+
+.card-trip p {
+  font-size: 12px;
+  opacity: .7;
+  margin: 0;
+  color:black
+}
+
+
+.card-trip .card-trip-infos {
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  position: relative;
+}
+
+.card-trip-infos .card-trip-user {
+  position: absolute;
+  right: 16px;
+  top: -20px;
+  width: 40px;
+}
+
+.vague {
+  background-size: cover;
+  background-position: bottom;
+  height: 15vh;
+  background-image: url('VAGUE.png');
+}
+
+.divers{
+  height: 60vh;
 }
