--- a/app/views/bookings/_dashboard.html.erb
+++ b/app/views/bookings/_dashboard.html.erb
@@ -1,17 +1,18 @@
-<h5>Pending bookings of your requests :</h5>
+<h3>Pending bookings</h3>
   <% @bookings_user.each do |b| %>
-    <div class="card-booking">
+    <div class="card-booking d-flex">
+     <div class="buttons d-grid">
+        <i style="font-size: 25px; color:blue;" class="fa-solid fa-user-clock"></i>
+      </div>
 
       <div class="card-booking-infos">
-        <h2>Offer: <%= b.offer.name %></h2>
-        <p>Status: <%=b.status %></p>
-        <p>Pro: <%=b.offer.user.first_name %></p>
-        <p>Start date: <%= b.start_at %></p>
-        <p>Location: <%= b.location %></p>
-        <p>Price: <%= b.amount %></p>
+        <h5><%= b.offer.name %></h5>
+        <p><span class="badge badge-pill">Status</span> <%=b.status %></p>
+        <p><span class="badge badge-pill">Pro</span> <%=b.offer.user.first_name %></p>
+        <p><span class="badge badge-pill">Start date</span> <%= b.start_at %></p>
+        <p><span class="badge badge-pill">Location</span> <%= b.location %></p>
+        <p><span class="badge badge-pill">Price</span> <%= b.amount %></p>
       </div>
-      <div class="buttons d-grid">
-        <i style="font-size: 35px; color:blue;" class="fa-solid fa-user-clock"></i>
-       </div>
+
     </div>
 <% end %>
