--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container">
   <div class="banner" >
-    <h1>Welcome to Scuba libre</h1>
+    <h1>Welcome to ScubaLibre</h1>
     <p>Find a scuba instructor for your next dive!</p>
     <div class="search w-25">
         <%= form_tag pros_path, method: :get, class: "d-flex" do %>
