--- a/app/views/bookings/_dashboard.html.erb
+++ b/app/views/bookings/_dashboard.html.erb
@@ -1,18 +1,20 @@
 <h3>Pending bookings</h3>
   <% @bookings_user.each do |b| %>
-    <div class="card-booking d-flex">
-     <div class="buttons d-grid">
-        <i style="font-size: 25px; color:blue;" class="fa-solid fa-user-clock"></i>
-      </div>
+    <div class="cards d-flex">
+      <div class="card-booking px-5 py-5">
+      <div class="buttons d-grid">
+          <i style="font-size: 25px; color:blue;" class="fa-solid fa-user-clock"></i>
+        </div>
 
-      <div class="card-booking-infos">
-        <h5><%= b.offer.name %></h5>
-        <p><span class="badge badge-pill">Status</span> <%=b.status %></p>
-        <p><span class="badge badge-pill">Pro</span> <%=b.offer.user.first_name %></p>
-        <p><span class="badge badge-pill">Start date</span> <%= b.start_at %></p>
-        <p><span class="badge badge-pill">Location</span> <%= b.location %></p>
-        <p><span class="badge badge-pill">Price</span> <%= b.amount %></p>
-      </div>
+        <div class="card-booking-infos">
+          <h5><%= b.offer.name %></h5>
+          <p><span class="badge badge-pill">Status</span> <%=b.status %></p>
+          <p><span class="badge badge-pill">Pro</span> <%=b.offer.user.first_name %></p>
+          <p><span class="badge badge-pill">Start date</span> <%= b.start_at %></p>
+          <p><span class="badge badge-pill">Location</span> <%= b.location %></p>
+          <p><span class="badge badge-pill">Price</span> <%= b.amount %></p>
+        </div>
 
-    </div>
+      </div>
 <% end %>
+    </div>
