--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,6 +1,6 @@
 <div class="container-transparent-navbar">
-</div>
-  <div class="">
+
+  <div>
         <div class="text-center">
           <h1><i class="fa-solid fa-dharmachakra"></i> Dashboard</h1>
           <h2>Welcome <%= current_user.first_name %>, 🤿</h2>
@@ -8,3 +8,4 @@
         <%= render "bookings/dashboard"%>
         <%# <%= render "boats/owner_boats"%>
   </div>
+</div>
