--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -79,10 +79,17 @@
     margin-left: 40px;
   }
 }
-.btn-secondary {
+.btn-filter {
   background-color: #eef3f9;
   color: #3439C9;
   border: none;
   border-radius: 23px;
-  margin-bottom: 10px
+  margin-bottom: 10px;
+  margin-top: 40px;
+}
+
+#map{
+  width: 450px;
+  height: 350px;
+  margin: 10px auto;
 }
