--- a/app/views/bookings/_dashboard.html.erb
+++ b/app/views/bookings/_dashboard.html.erb
@@ -16,6 +16,12 @@
           <p><span class="badge badge-pill">Price</span> <%= b.amount %></p>
         </div>
 
+      <% if b.status == "pending"  %>
+            <div class="buttons d-grid">
+              <%= link_to "Cancel", cancelled_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-outline-danger" %>
+            </div>
+          <% end %>
+
     </div>
   <% end %>
 </div>
@@ -37,7 +43,17 @@
           <p><span class="badge badge-pill">Location</span> <%= b.location %></p>
           <p><span class="badge badge-pill">Price</span> <%= b.amount %></p>
         </div>
-
+        <% if b.status == "pending"  %>
+            <div class="buttons d-grid">
+              <%= link_to "Accept", accepted_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-outline-success" %>
+              <%= link_to "Deny", denied_booking_path(b), data: {turbo_method: :patch}, class: "btn btn-outline-warning" %>
+            </div>
+          <% end %>
+          <% if b.status == "accepted"  %>
+            <div class="buttons d-grid">
+              <i style="font-size: 35px; color:green;" class="fa-solid fa-check"></i>
+            </div>
+          <% end %>
     </div>
   <% end %>
 </div>
