--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -4,7 +4,12 @@
         <div class="text-center">
           <h1><i class="fa-solid fa-dharmachakra"></i> Dashboard</h1>
           <h2>Welcome <%= current_user.first_name %>, 🤿</h2>
+            <div class="text-center my-3">
+              <%= link_to "Add a new offer", new_offer_path, class: "btn btn-secondary" %>
+              <%= link_to "Edit profile", edit_user_registration_path, class: "btn btn-secondary" %>
+              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "btn btn-secondary" %>
+          </div>
         </div>
-        <%= render "bookings/dashboard"%>
   </div>
+  <%= render "bookings/dashboard"%>
 </div>
