--- a/app/views/offers/_show_offers_pro.html.erb
+++ b/app/views/offers/_show_offers_pro.html.erb
@@ -1,7 +1,7 @@
-<div class="card-offers">
+<div class="card-offers shadow-sm">
   <h2><%= offer.name %></h2>
   <div class="card-offers-bottom">
-    <p><%= offer.price %> <%= offer.currency %></p>
+    <p><%= offer.currency %> <%= offer.price %></p>
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal<%=offer.id%>">
     View offer
