--- a/app/views/offers/_show_offers_pro.html.erb
+++ b/app/views/offers/_show_offers_pro.html.erb
@@ -1,7 +1,9 @@
 <div class="card-offers shadow-sm">
   <h2><%= offer.name %></h2>
+  <p><%= truncate offer.briefing, length:150 %></p>
+  <p><i><%= offer.duration %> <%= offer.unit_duration %></i></p>
   <div class="card-offers-bottom">
-    <p><%= offer.currency %> <%= offer.price %></p>
+    <p><strong><%= offer.currency %> <%= offer.price %></strong></p>
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal<%=offer.id%>">
     View offer
