--- a/app/views/pros/index.html.erb
+++ b/app/views/pros/index.html.erb
@@ -33,7 +33,7 @@
           <div class="card-infos font-weight-light">
             <div>
               <h2><%= p.first_name %> <%= p.last_name[0].capitalize%>.</h2>
-              <h6><i style="color:#477E9F" class="fa-solid fa-location-pin mx-1"></i><p><%= p.location %></p></h6>
+              <h6><i style="color:#477E9F" class="fa-solid fa-location-dot mx-1"></i><p><%= p.location %></p></h6>
                 <p><%= truncate p.bio, length: 100 %></p>
 
               </div>
