--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
   <div class="banner" >
     <h1>Welcome to ScubaLibre</h1>
     <p>Find a scuba instructor for your next dive!</p>
-    <div class="search w-25">
+    <div class="search col-4">
         <%= form_tag pros_path, method: :get, class: "d-flex" do %>
           <%= text_field_tag :query,
             params[:query],
