--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -96,3 +96,11 @@
 .divers{
   height: 10vh;
 }
+
+.inspire{
+  margin-left: 130px;
+}
+
+.video {
+background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7))
+}
