--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
+  <div class="video">
   <%= video_tag "https://res.cloudinary.com/dtohrmf4g/video/upload/v1654167319/aquarium_-_109184_Original_pgrubc.mp4", autoplay: true, muted: true, loop: true, id: "background-video" %>
-
+  </div>
 <div class="container">
   <div class="banner" >
     <h1>Welcome to ScubaLibre</h1>
@@ -32,7 +33,9 @@
     Whilst it’s easy to feel powerless and overwhelmed, the truth is, if everyone pitches in, then we can make a big difference.</p>
   </div>
 </div>
-<h1> Feeling uninspired ? Here are some recommendations for you </h1>
+<div class="inspire">
+  <h1> Feeling uninspired ? Here are some recommendations for you </h1>
+</div>
 
 <div class="cards d-flex px-5 py-5">
   <div class="card-trip w-25 rounded">
