--- a/app/views/pros/show.html.erb
+++ b/app/views/pros/show.html.erb
@@ -10,7 +10,7 @@
 <div class="container mt-5">
   <%= link_to "Back", :back, class: "btn btn-secondary" %>
   <%# <%= link_to "Create a new offer", new_offer_path, class: "btn btn-secondary" %>
-  <h2><%=@pro.first_name%>'s specilaties</h2>
+  <h2><%=@pro.first_name%>'s courses</h2>
 
   <div class="offers mb-4">
       <% @offers.each do |o| %>
