--- a/app/views/bookings/_dashboard.html.erb
+++ b/app/views/bookings/_dashboard.html.erb
@@ -1,4 +1,4 @@
-<h3 class="mx-5"><u>YOUR BOOKINGS</u></h3>
+<h3 class="mx-5 mt-5"><u>YOUR BOOKINGS</u></h3>
   <div class="cards mx-5 mb-5">
   <% @bookings_user.each do |b| %>
 
