--- a/app/views/bookings/_dashboard.html.erb
+++ b/app/views/bookings/_dashboard.html.erb
@@ -7,7 +7,7 @@
 
         <div class="card-infos">
           <h5><%= b.offer.name %></h5>
-          <p><span class="badge badge-pill">Status</span> <%=b.status %></p>
+          <p><span class="badge badge-pill">Status</span><strong> <%=b.status %></strong></p>
           <p><span class="badge badge-pill">Pro</span> <%=b.offer.user.first_name %></p>
           <p><span class="badge badge-pill">Start date</span> <%= b.start_at %></p>
           <p><span class="badge badge-pill">Location</span> <%= b.location %></p>
@@ -24,8 +24,18 @@
           <% end %>
           <% if b.status == "cancelled"  %>
             <div class="buttons d-grid">
-              <i style="font-size: 25px; color:orange;" class="fa-regular fa-face-frown"></i>
+              <i style="font-size: 25px; color:grey;" class="fa-solid fa-xmark"></i>
             </div>
+          <% end %>
+          <% if b.status == "accepted"  %>
+              <div class="buttons d-grid">
+                <i style="font-size: 25px; color:green;" class="fa-solid fa-face-smile"></i>
+              </div>
+          <% end %>
+          <% if b.status == "denied"  %>
+              <div class="buttons d-grid">
+                <i style="font-size: 25px; color:red;" class="fa-solid fa-face-frown"></i>
+              </div>
           <% end %>
 
     </div>
@@ -44,7 +54,7 @@
 
           <div class="card-infos">
             <h5><%= b.offer.name %></h5>
-            <p><span class="badge badge-pill">Status</span> <%=b.status %></p>
+            <p><span class="badge badge-pill">Status</span><strong> <%=b.status %></strong></p>
             <p><span class="badge badge-pill">Pro</span> <%=b.user.first_name %></p>
             <p><span class="badge badge-pill">Start date</span> <%= b.start_at %></p>
             <p><span class="badge badge-pill">Location</span> <%= b.location %></p>
@@ -59,6 +69,11 @@
                 <%= link_to "Deny", denied_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-outline-danger" %>
               </div>
             <% end %>
+            <% if b.status == "cancelled"  %>
+            <div class="buttons d-grid">
+              <i style="font-size: 25px; color:grey;" class="fa-solid fa-xmark"></i>
+            </div>
+          <% end %>
             <% if b.status == "accepted"  %>
               <div class="buttons d-grid">
                 <i style="font-size: 25px; color:green;" class="fa-solid fa-check"></i>
