--- a/app/views/bookings/_dashboard.html.erb
+++ b/app/views/bookings/_dashboard.html.erb
@@ -19,6 +19,7 @@
               <i style="font-size: 25px; color:blue;" class="fa-solid fa-user-clock"></i>
             </div>
             <div class="text-center">
+              <%= link_to "Details", booking_path(b), class: "btn btn-outline-success" %>
               <%= link_to "Cancel", cancelled_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-outline-warning" %>
             </div>
           <% end %>
@@ -52,6 +53,7 @@
               <i style="font-size: 25px; color:blue;" class="fa-solid fa-user-clock"></i>
             </div>
             <div class="text-center">
+              <%= link_to "Details", booking_path(b), class: "btn btn-outline-success" %>
               <%= link_to "Accept", accepted_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-outline-success" %>
               <%= link_to "Deny", denied_booking_path(b), data: {turbo_method: :patch, turbo_confirm: "Are you sure?"}, class: "btn btn-outline-danger" %>
             </div>
